--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,26 @@
 .App {
-  /* text-align: center;
+  text-align: center;
   justify-content: center;
   align-items: center;
-   */
+  
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bob {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.steve {
+  width: 100%;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+  width: 100%;
 }
 
 .member-container {
@@ -51,8 +34,8 @@
   justify-content: center;
   text-align: center;
   margin: 0;
-  left: 50%;
-  top: 50%; 
+  /* left: 50%;
+  top: 50%;  */
   /* transform: translate(-50%, -50%); */
 }
 h2 {
